# zip

./: .gitignore  .gitignore~  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt~  build.bat  build.bat~  build.sh  build.sh~  del  main.cpp  main.cpp~  readme.md  test1.cpp  test1.cpp~  test2.cpp  test2.cpp~  testFOLib.cpp  testFOLib.cpp~  testhuffman.cpp  testhuffman.cpp~
FOLib/: CMakeLists.txt  CMakeLists.txt~  main-def.cpp  main-def.cpp~  main.cpp  main.cpp~
fol/: CMakeLists.txt  CMakeLists.txt~  main.cpp  maindef.cpp
huf/: #CMakeLists.txt#  CMakeLists.txt  main.cpp  main.cpp~  main.h  main.h~  mian.h  mian.h~
huffman/: .#main.cpp  CMakeLists.txt  CMakeLists.txt~  compile_flags.txt  hufman.cpp  hufman.cpp~  libhufman.cpp  libhufman.cpp~  main.cpp
libIO/: CMakeLists.txt  CMakeLists.txt~  compile_flags.txt  libIO.cpp  libIO.cpp~  main-def.cpp~  main.cpp  main.cpp~
